Migrated from maven to gradle