@@ -1,6 +1,13 @@
 FROM openjdk:8-jre-alpine
 
-EXPOSE 7000
-ENTRYPOINT ["/usr/bin/java", "-jar", "/usr/share/javalin/my-javalin.jar"]
+ENV APPLICATION_USER ktor
+RUN adduser -D -g '' $APPLICATION_USER
 
-ADD target/graphqlKotlinJavalin-1.0-SNAPSHOT-shaded.jar /usr/share/javalin/my-javalin.jar
+RUN mkdir /app
+RUN chown -R $APPLICATION_USER /app
+
+USER $APPLICATION_USER
+
+COPY ./build/libs/graphql-kotlin-ktor-all.jar /app/graphql-kotlin-ktor-all.jar
+WORKDIR /app
+CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "graphql-kotlin-ktor-all.jar"]
